@@ -28,7 +28,7 @@
 #  Loic Dachary <loic@gnu.org>
 #
 
-import sys, os
+import sys, os, tempfile, shutil
 sys.path.insert(0, "@srcdir@/..")
 sys.path.insert(0, "..")
 
@@ -960,6 +960,52 @@ class PokerClientTestCase(unittest.TestCase):
         d.addCallback(resendPackets)
         return d
 
+    #-----------------------------------------------------------------------------
+    translateConfigs = [ ('limit-2-4',  
+"""<?xml version="1.0" encoding="ISO-8859-1"?>
+<bet xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="bet.xsd" name="2-4 limit" table-stakes="yes" unit="100" buy-in="1000" best-buy-in="6000" max-buy-in="100000000" poker_engine_version="1.3.0">
+    <description>Limit 2/4</description>
+    <blind small="100" big="200"/>
+    <all_in method="side"/> 
+    <variants ids="omaha omaha8 holdem">
+      <round name="pre-flop" fixed="200" cap="3"/>
+      <round name="flop" fixed="200" cap="3"/>
+      <round name="turn" fixed="400" cap="3"/>
+      <round name="river" fixed="400" cap="3"/>
+    </variants>
+</bet>
+""", 'Limit 2/4', [] ),
+    ( 'undescribed' , 
+"""<?xml version="1.0" encoding="ISO-8859-1"?>
+<bet xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="bet.xsd" name="2-4 limit" table-stakes="yes" unit="100" buy-in="1000" best-buy-in="6000" max-buy-in="100000000" poker_engine_version="1.3.0">
+    <blind small="100" big="200"/>
+    <all_in method="side"/> 
+    <variants ids="omaha omaha8 holdem">
+      <round name="pre-flop" fixed="200" cap="3"/>
+      <round name="flop" fixed="200" cap="3"/>
+      <round name="turn" fixed="400" cap="3"/>
+      <round name="river" fixed="400" cap="3"/>
+    </variants>
+</bet>
+""" , 'undescribed',
+[ "ERROR *CRITICAL* can't find readable name for undescribed"]) ]
+    def test23_checkTranslateToFileName(self):
+        self.tmpdir = tempfile.mkdtemp()
+        self.client_factory[0].dirs = [ self.tmpdir ]
+
+        for (name, data, expectedReturn, expectedOutput) in self.translateConfigs:
+            outFile = os.path.join(self.tmpdir, "poker.%s.xml" % name)
+            outFH = open(outFile, "w")
+            outFH.write(data)
+            outFH.close()
+            clear_all_messages()
+            self.assertEquals(self.client_factory[0].translateFile2Name(name),
+                              expectedReturn)
+            self.assertEquals(get_messages(), expectedOutput)
+
+        shutil.rmtree(self.tmpdir)
+        clear_all_messages()
+        return True
 
 class PokerClientFactoryMockup(pokerclient.PokerClientFactory):
     def __init__(self, *args, **kwargs):
@@ -1039,7 +1085,7 @@ class SettingMockup:
 # ------------------------------------------------------
 def Run():
     loader = runner.TestLoader()
-#    loader.methodPrefix = "test01"
+#    loader.methodPrefix = "test23"
     suite = loader.suiteFactory()
     suite.addTest(loader.loadClass(PokerClientTestCase))
 #    suite.addTest(loader.loadClass(PokerClientFactoryTestCase))
